# edra_lounge

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Makefile  README.md  TASK.md  TASK_refactor_clustering.md  pyproject.toml  research_profiles_master.csv  seeded_run.yaml
backend/: app.py  config.py  db.py  orchestrator.py  schemas.py  seed.py  seed_demo.py  seed_from_eval.py
backend/clustering/: cluster.py  knn.py  summarize.py
backend/data/: archetypes.yaml
backend/factory/: factory.py
backend/induction/: induce.py
backend/lemlist/: client.py
backend/llm/: client.py
backend/memory/: ids.py  models.py  seed.py  store.py
backend/monitor/: consistency.py
data/: viz_coords_2d.json
evaluation/: cluster_outreach.py  cluster_production.py  filter_autoreplies.py  filter_cold_outreach.py  run_pipeline.py  strategy_rules.py
frontend/: app.js  edra_design_mockup.html  edra_pitch_mockup.html  index.html  styles.css
papers/: bandit_evaluation_explainer.html  edra_demo.bib  edra_demo.tex  edra_presentation.html  farseev_google_scholar_top10.md
scripts/: chromakey_avatars.py  download_model.py  setup_lemlist_campaign.py  test_lemlist_flow.py  update_lemlist_template.py
tests/: test_cluster_viz.py  test_clustering_refactor.py  test_consistency_loop_integration.py  test_end_dialog_frontend.py  test_inject_contradiction.py  test_knn.py  test_orchestrator.py  test_outreach.py  test_pitch.py  test_preferences.py  test_privacy_purge.py  test_profile_source.py  test_response_options.py  test_seed_with_names.py  test_sessions.py  test_visitors.py
(+128 files in other folders)
