[project]
name = "edra-lounge"
version = "0.1.0"
description = "EDRA Lounge — booth-demo of Experience-Driven Rule Adaptation as a café-manager game"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sentence-transformers>=2.7",
    "hdbscan>=0.8.33",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "umap-learn>=0.5.5",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "sse-starlette>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
